# BBSLMIRP

./: .gitignore  BBSLMIRP_QT.pro  CMakeLists.txt  COPYRIGHT.TXT  LICENSE  README.md  main.cc  testmain.cc
Algorithm/: mlem.cc  patch_mapper.cc  patch_mapper.h  pet_translator.cc  ring_mapper.cc  ring_mapper.h  siddon_projector.cc  siddon_projector.h  translator.h
FileIO/: datastruct.cc  filestruct.cc  filestruct.h
Geometry/: block_interface.h  geometry.h  grid.cc  grid.h  gridsize.h  obliqueblock.h  patch.cc  point.h  ray.cc  raycast.h  rotation.cc  sphericalpoint.cc
ImageProcessing/: filter.cc  filter.h
PETSystem/: map_task.cc  pet_factory.h  petapplication.cc  petscanner.h  reconstruction_task.cc  reconstruction_task.h  ringpet.cc  ringpet.h  ringpet_factory.cc  ringpet_factory.h  spherepet.cc  spherepet.h  spherepet_factory.cc
include/Algorithm/: mapper.h  mlem.h  patch_mapper.h  pet_translator.h  projector.h  ring_mapper.h
include/FileIO/: datastruct.h  filestruct.h
include/Geometry/: block.h  grid.h  patch.h  ray.h  rotation.h  sphericalpoint.h
include/ImageProcessing/: filter.h
include/PETSystem/: map_task.h  pet_factory.h  petapplication.h  petscanner.h  ringpet.h  spherepet.h  spherepet_factory.h  task.h
src/Algorithm/: mlem.cc  patch_mapper.cc  pet_translator.cc  ring_mapper.cc  siddon_projector.cc
src/FileIO/: datastruct.cc  filestruct.cc
src/Geometry/: grid.cc  gridsize.cc  obliqueblock.cc  point.cc  raycast.cc
src/ImageProcessing/: filter.cc
src/PETSystem/: map_task.cc  petapplication.cc  reconstruction_task.cc  ringpet.cc  ringpet_factory.cc  spherepet.cc  spherepet_factory.cc
